--- a/public/css/app.css
+++ b/public/css/app.css
@@ -54,6 +54,64 @@
 }
 
 /*!
+ * gender grid
+ */
+.gender-grid {
+  display: -ms-flexbox;
+  display: flex;
+
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+
+  -ms-flex-pack: center;
+  justify-content: center;
+
+   margin: 0 24px 24px;
+}
+.gender-grid > .gender {
+  position: relative;
+
+  width: 128px;
+  height: 128px;
+  line-height: 128px;
+  text-align: center;
+
+  background-image: url('../img/gender.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+
+  -ms-flex-item-align: center;
+  align-self: center;
+}
+.gender-grid > .gender:before,
+.gender-grid > .gender:after {
+  display: table;
+  position: absolute;
+  width: 48px;
+  height: 48px;
+  line-height: 48px;
+  text-align: center;
+  border-radius: 50%;
+  color: #fff;
+}
+.gender-grid > .gender:before {
+  content: attr(data-male);
+  top: 0;
+  right: -48px;
+  background-color: #64b5f6;
+}
+.gender-grid > .gender:after {
+  content: attr(data-female);
+  bottom: 0;
+  left: -48px;
+  background-color: #f06292;
+}
+.gender-grid > .gender > .chip {
+  background-color: #fff;
+}
+
+/*!
  * tr-map
  */
 .tr-map {
@@ -2995,7 +3053,7 @@ table.table-loading:after {
 }
 .modal > .modal-content > .modal-body {
   overflow-y: auto;
-  max-height: 300px;
+  max-height: 340px;
 
   padding: 0 2rem;
 }
@@ -3014,6 +3072,17 @@ table.table-loading:after {
 }
 .modal.modal-large {
   max-width: 660px;
+}
+
+.modal.with-bg {
+  background-image: url('../img/background.png');
+  background-repeat: no-repeat;
+  background-position: bottom center;
+  background-size: cover;
+}
+.modal.with-bg > .modal-content > .modal-title,
+.modal.with-bg > .modal-footer {
+  background-color: transparent;
 }
 
 #main-nav {
@@ -4028,19 +4097,19 @@ nav.scrolled.active,
  * white input
  */
 .input-field.white-text label {
-  color: #fff !important;
+  color: rgba(255, 255, 255, .8) !important;
 }
 .input-field.white-text input[type=text]:focus + label {
-  color: #fff !important;
+  color: rgba(255, 255, 255, .8) !important;
 }
 .input-field.white-text input[type=text] {
-  border-bottom: 1px solid #fff !important;
-  box-shadow: 0 1px 0 0 #fff !important;
+  border-bottom: 1px solid rgba(255, 255, 255, .8) !important;
+  box-shadow: 0 1px 0 0 rgba(255, 255, 255, .8) !important;
 
-  color: #fff;
+  color: rgba(255, 255, 255, .8);
 }
 .input-field.white-text .prefix.active {
-  color: #fff !important;
+  color: rgba(255, 255, 255, .8) !important;
 }
 
 /*!
