--- a/public/css/dark.theme.css
+++ b/public/css/dark.theme.css
@@ -1,8 +1,8 @@
 /*!
  |-------------------------------
- | veri.zone 1.0
+ | 8vz.net 1.0
  |-------------------------------
- | (c) 2019 - veri.zone
+ | (c) 2019 - 8vz.net
  |-------------------------------
  */
 
